--- a/nats-server/Cargo.toml
+++ b/nats-server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "nats-server"
 version = "0.1.0"
 edition = "2021"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,6 +15,6 @@ nuid = "0.3.1"
 rand = "0.8"
 
 [dev-dependencies]
-async-nats = "0.16"
+async-nats = "0.21"
 tokio = { version = "1", features = ["full"]  }
 futures = "0.3"
